rust/tests/errors/nested_unclosed_element.hyper
<div>
    <section>
        <span>Content
    </section>
</div>
