rust/tests/errors/nested_unclosed_element.expected.err

 file: nested_unclosed_element.hyper:3:9
error: <span> is never closed.
 3 |         <span>Content
   |         ^^^^^^ opened here

 help: Close with </span> or <span />

